# contagent

./: .build.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  contagent.c  gradle.properties  meson.build  settings.gradle.kts
.build/: commit.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  cmake-single-platform.yml
app/src/main/kotlin/sh/greener/contagent/app/: App.kt
contagent-app/: build.gradle.kts
contagent-app/src/main/kotlin/sh/greener/contagent/app/: App.kt
contagent-bin/src/: main.cc  main.h  meson.build
contagent-lib/: build.gradle.kts  meson.build
contagent-lib/include/contagent/: agent.h  behaviour.h  belief.h  configuration.h  contagent.h  named.h  runner.h  summary.h  uuidd.h
contagent-lib/include/contagent/json/: agent_spec.h  behaviour_spec.h  belief_spec.h  json.h  summary_spec.h  zstd.h
contagent-lib/src/: agent.cc  behaviour.cc  belief.cc  configuration.cc  meson.build  named.cc  runner.cc  summary.cc  uuidd.cc
contagent-lib/src/json/: agent_spec.cc  behaviour_spec.cc  belief_spec.cc  summary_spec.cc  zstd.cc  zstd_boost.cc
contagent-lib/src/main/kotlin/sh/greener/contagent/lib/: Agent.kt  Behaviour.kt  Belief.kt  Configuration.kt  Named.kt  Runner.kt  Summary.kt  SummaryStats.kt  UUIDd.kt
contagent-lib/src/main/kotlin/sh/greener/contagent/lib/json/: AgentSpec.kt  BehaviourSpec.kt  BeliefSpec.kt  SummarySpec.kt
include/: contagent.h
include/contagent/: agent.h  runner.h  summary.h  types.h  util.h
src/: agent.c  contagent.c  meson.build  runner.c  summary.c
test/: check_contagent.c  check_summary.c  check_summary.h  meson.build
test-data/: agents.json  agents.json.zst  behaviours.json  beliefs.json  beliefs_0.json
test-data/1-run/: agents_0.json  agents_0.json.zst  behaviours.json  beliefs_0.json  output.json.zst
