lib_sources = files(
    'agent.cc',
    'behaviour.cc',
    'belief.cc',
    'configuration.cc',
    'named.cc',
    'runner.cc',
    'summary.cc',
    'uuidd.cc',
    'json/agent_spec.cc',
    'json/behaviour_spec.cc',
    'json/belief_spec.cc',
    'json/summary_spec.cc',
    'json/zstd_boost.cc',
    'json/zstd.cc'
)